# starter-kit

bash/: bash-hotkeys.md
drf-template/: README.md  main.py  pyproject.toml
drf-template/api/: settings.py  urls.py
