[project]
name = "drf-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "drf-spectacular>=0.28.0",
    "djangorestframework>=3.17.1",
    "psycopg[binary]>=3.3.3",
]
